--- a/src/output.css
+++ b/src/output.css
@@ -172,14 +172,29 @@
   .m-auto {
     margin: auto;
   }
+  .\!mx-auto {
+    margin-inline: auto !important;
+  }
+  .mx-0 {
+    margin-inline: calc(var(--spacing) * 0);
+  }
+  .mx-auto {
+    margin-inline: auto;
+  }
   .mt-0 {
     margin-top: calc(var(--spacing) * 0);
   }
   .mt-\[20px\] {
     margin-top: 20px;
   }
+  .mt-\[30px\] {
+    margin-top: 30px;
+  }
   .mt-\[40px\] {
     margin-top: 40px;
+  }
+  .mt-\[60px\] {
+    margin-top: 60px;
   }
   .ml-\[20px\] {
     margin-left: 20px;
@@ -193,8 +208,17 @@
   .table {
     display: table;
   }
+  .h-0 {
+    height: calc(var(--spacing) * 0);
+  }
   .h-\[2\] {
     height: 2;
+  }
+  .h-\[4\] {
+    height: 4;
+  }
+  .h-\[20px\] {
+    height: 20px;
   }
   .h-\[40px\] {
     height: 40px;
@@ -202,20 +226,38 @@
   .h-\[60px\] {
     height: 60px;
   }
+  .h-\[149px\] {
+    height: 149px;
+  }
+  .h-\[187px\] {
+    height: 187px;
+  }
   .h-\[200px\] {
     height: 200px;
   }
   .h-\[263px\] {
     height: 263px;
   }
+  .h-\[400px\] {
+    height: 400px;
+  }
+  .h-\[430px\] {
+    height: 430px;
+  }
   .w-0 {
     width: calc(var(--spacing) * 0);
+  }
+  .w-\[0px\] {
+    width: 0px;
   }
   .w-\[9\%\] {
     width: 9%;
   }
   .w-\[22\] {
     width: 22;
+  }
+  .w-\[30\] {
+    width: 30;
   }
   .w-\[80\] {
     width: 80;
@@ -232,11 +274,41 @@
   .w-\[274px\] {
     width: 274px;
   }
+  .w-\[280px\] {
+    width: 280px;
+  }
+  .w-\[300px\] {
+    width: 300px;
+  }
+  .w-\[302px\] {
+    width: 302px;
+  }
+  .w-\[306px\] {
+    width: 306px;
+  }
   .w-\[307px\] {
     width: 307px;
   }
+  .w-\[310px\] {
+    width: 310px;
+  }
+  .w-\[312px\] {
+    width: 312px;
+  }
+  .w-\[320px\] {
+    width: 320px;
+  }
+  .w-\[322px\] {
+    width: 322px;
+  }
+  .w-\[330px\] {
+    width: 330px;
+  }
   .w-\[340px\] {
     width: 340px;
+  }
+  .w-\[360px\] {
+    width: 360px;
   }
   .w-\[374px\] {
     width: 374px;
@@ -244,8 +316,35 @@
   .w-\[380px\] {
     width: 380px;
   }
+  .w-\[400px\] {
+    width: 400px;
+  }
   .w-\[430px\] {
     width: 430px;
+  }
+  .w-\[690px\] {
+    width: 690px;
+  }
+  .w-\[2800px\] {
+    width: 2800px;
+  }
+  .max-w-\[1px\] {
+    max-width: 1px;
+  }
+  .max-w-\[11px\] {
+    max-width: 11px;
+  }
+  .max-w-\[1024px\] {
+    max-width: 1024px;
+  }
+  .max-w-\[1124px\] {
+    max-width: 1124px;
+  }
+  .max-w-\[1126px\] {
+    max-width: 1126px;
+  }
+  .max-w-\[1240px\] {
+    max-width: 1240px;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -253,8 +352,14 @@
   .resize {
     resize: both;
   }
+  .\!flex-col {
+    flex-direction: column !important;
+  }
   .flex-col {
     flex-direction: column;
+  }
+  .flex-row {
+    flex-direction: row;
   }
   .flex-wrap {
     flex-wrap: wrap;
@@ -286,8 +391,20 @@
   .gap-\[15px\] {
     gap: 15px;
   }
+  .gap-\[20px\] {
+    gap: 20px;
+  }
+  .gap-\[30px\] {
+    gap: 30px;
+  }
+  .rounded-\[5px\] {
+    border-radius: 5px;
+  }
   .rounded-\[10px\] {
     border-radius: 10px;
+  }
+  .rounded-\[100px\] {
+    border-radius: 100px;
   }
   .border {
     border-style: var(--tw-border-style);
@@ -302,14 +419,29 @@
   .bg-\[\#F2F2F2\] {
     background-color: #F2F2F2;
   }
+  .bg-\[\#FFFFFF\] {
+    background-color: #FFFFFF;
+  }
   .p-0 {
     padding: calc(var(--spacing) * 0);
   }
   .p-\[0px\] {
     padding: 0px;
   }
+  .p-\[10px\] {
+    padding: 10px;
+  }
+  .p-\[20px\] {
+    padding: 20px;
+  }
   .p-\[22px\] {
     padding: 22px;
+  }
+  .p-\[30px\] {
+    padding: 30px;
+  }
+  .p-\[px\] {
+    padding: px;
   }
   .px-0 {
     padding-inline: calc(var(--spacing) * 0);
@@ -322,6 +454,24 @@
   }
   .px-\[20px\] {
     padding-inline: 20px;
+  }
+  .py-px {
+    padding-block: 1px;
+  }
+  .pb-\[1-0px\] {
+    padding-bottom: 1-0px;
+  }
+  .pb-\[20\] {
+    padding-bottom: 20;
+  }
+  .pb-\[20px\] {
+    padding-bottom: 20px;
+  }
+  .pb-\[40px\] {
+    padding-bottom: 40px;
+  }
+  .pb-\[100px\] {
+    padding-bottom: 100px;
   }
   .text-center {
     text-align: center;
@@ -345,14 +495,32 @@
   .text-\[21px\] {
     font-size: 21px;
   }
+  .text-\[22px\] {
+    font-size: 22px;
+  }
+  .text-\[24px\] {
+    font-size: 24px;
+  }
+  .text-\[26px\] {
+    font-size: 26px;
+  }
   .text-\[36px\] {
     font-size: 36px;
+  }
+  .text-\[\#25090F\] {
+    color: #25090F;
+  }
+  .text-\[\#575757\] {
+    color: #575757;
   }
   .text-\[center\] {
     color: center;
   }
   .text-\[grey\] {
     color: grey;
+  }
+  .text-\[w\] {
+    color: w;
   }
   .text-\[white\] {
     color: white;
@@ -416,6 +584,36 @@
       width: 382px;
     }
   }
+  .md\:w-\[505px\] {
+    @media (width >= 48rem) {
+      width: 505px;
+    }
+  }
+  .md\:w-\[600px\] {
+    @media (width >= 48rem) {
+      width: 600px;
+    }
+  }
+  .md\:w-\[690\] {
+    @media (width >= 48rem) {
+      width: 690;
+    }
+  }
+  .md\:w-\[690px\] {
+    @media (width >= 48rem) {
+      width: 690px;
+    }
+  }
+  .md\:w-\[700px\] {
+    @media (width >= 48rem) {
+      width: 700px;
+    }
+  }
+  .md\:w-\[710px\] {
+    @media (width >= 48rem) {
+      width: 710px;
+    }
+  }
   .md\:flex-col {
     @media (width >= 48rem) {
       flex-direction: column;
@@ -441,14 +639,44 @@
       flex-wrap: wrap;
     }
   }
+  .md\:\!items-center {
+    @media (width >= 48rem) {
+      align-items: center !important;
+    }
+  }
+  .md\:items-center {
+    @media (width >= 48rem) {
+      align-items: center;
+    }
+  }
   .md\:justify-between {
     @media (width >= 48rem) {
       justify-content: space-between;
     }
   }
+  .md\:justify-center {
+    @media (width >= 48rem) {
+      justify-content: center;
+    }
+  }
+  .md\:\!gap-\[41px\] {
+    @media (width >= 48rem) {
+      gap: 41px !important;
+    }
+  }
   .md\:gap-\[40px\] {
     @media (width >= 48rem) {
       gap: 40px;
+    }
+  }
+  .md\:gap-\[41px\] {
+    @media (width >= 48rem) {
+      gap: 41px;
+    }
+  }
+  .md\:p-0 {
+    @media (width >= 48rem) {
+      padding: calc(var(--spacing) * 0);
     }
   }
   .md\:p-\[40px\] {
@@ -464,6 +692,21 @@
   .md\:text-\[21px\] {
     @media (width >= 48rem) {
       font-size: 21px;
+    }
+  }
+  .md\:text-\[24px\] {
+    @media (width >= 48rem) {
+      font-size: 24px;
+    }
+  }
+  .md\:text-\[40px\] {
+    @media (width >= 48rem) {
+      font-size: 40px;
+    }
+  }
+  .md\:text-\[60px\] {
+    @media (width >= 48rem) {
+      font-size: 60px;
     }
   }
   .md\:text-\[70px\] {
@@ -496,14 +739,124 @@
       margin-left: 60px;
     }
   }
+  .lg\:flex {
+    @media (width >= 64rem) {
+      display: flex;
+    }
+  }
+  .lg\:w-0 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:w-\[0px\] {
+    @media (width >= 64rem) {
+      width: 0px;
+    }
+  }
+  .lg\:w-\[282px\] {
+    @media (width >= 64rem) {
+      width: 282px;
+    }
+  }
+  .lg\:w-\[300px\] {
+    @media (width >= 64rem) {
+      width: 300px;
+    }
+  }
+  .lg\:w-\[302px\] {
+    @media (width >= 64rem) {
+      width: 302px;
+    }
+  }
+  .lg\:w-\[320px\] {
+    @media (width >= 64rem) {
+      width: 320px;
+    }
+  }
+  .lg\:w-\[350px\] {
+    @media (width >= 64rem) {
+      width: 350px;
+    }
+  }
+  .lg\:w-\[360px\] {
+    @media (width >= 64rem) {
+      width: 360px;
+    }
+  }
+  .lg\:w-\[380px\] {
+    @media (width >= 64rem) {
+      width: 380px;
+    }
+  }
+  .lg\:w-\[400\] {
+    @media (width >= 64rem) {
+      width: 400;
+    }
+  }
+  .lg\:w-\[400px\] {
+    @media (width >= 64rem) {
+      width: 400px;
+    }
+  }
+  .lg\:w-\[410px\] {
+    @media (width >= 64rem) {
+      width: 410px;
+    }
+  }
+  .lg\:w-\[410pxpx\] {
+    @media (width >= 64rem) {
+      width: 410pxpx;
+    }
+  }
+  .lg\:w-\[467px\] {
+    @media (width >= 64rem) {
+      width: 467px;
+    }
+  }
   .lg\:w-\[497px\] {
     @media (width >= 64rem) {
       width: 497px;
     }
   }
+  .lg\:w-\[500px\] {
+    @media (width >= 64rem) {
+      width: 500px;
+    }
+  }
   .lg\:w-\[697px\] {
     @media (width >= 64rem) {
       width: 697px;
+    }
+  }
+  .lg\:w-\[900px\] {
+    @media (width >= 64rem) {
+      width: 900px;
+    }
+  }
+  .lg\:w-\[px\] {
+    @media (width >= 64rem) {
+      width: px;
+    }
+  }
+  .lg\:flex-col {
+    @media (width >= 64rem) {
+      flex-direction: column;
+    }
+  }
+  .lg\:flex-row {
+    @media (width >= 64rem) {
+      flex-direction: row;
+    }
+  }
+  .lg\:items-start {
+    @media (width >= 64rem) {
+      align-items: flex-start;
+    }
+  }
+  .lg\:justify-around {
+    @media (width >= 64rem) {
+      justify-content: space-around;
     }
   }
   .lg\:justify-between {
@@ -514,6 +867,41 @@
   .lg\:gap-\[80px\] {
     @media (width >= 64rem) {
       gap: 80px;
+    }
+  }
+  .lg\:p-0 {
+    @media (width >= 64rem) {
+      padding: calc(var(--spacing) * 0);
+    }
+  }
+  .lg\:p-20 {
+    @media (width >= 64rem) {
+      padding: calc(var(--spacing) * 20);
+    }
+  }
+  .lg\:p-\[15px\] {
+    @media (width >= 64rem) {
+      padding: 15px;
+    }
+  }
+  .lg\:p-\[20px\] {
+    @media (width >= 64rem) {
+      padding: 20px;
+    }
+  }
+  .lg\:text-\[24px\] {
+    @media (width >= 64rem) {
+      font-size: 24px;
+    }
+  }
+  .lg\:text-\[40px\] {
+    @media (width >= 64rem) {
+      font-size: 40px;
+    }
+  }
+  .lg\:text-\[60px\] {
+    @media (width >= 64rem) {
+      font-size: 60px;
     }
   }
   .lg\:text-green-700 {
